# book-better

./: .env.example  .gitignore  README.md  pyproject.toml
book_better/: enums.py  logging.py  main.py  models.py  utils.py
book_better/better/: live_client.py
build_scripts/: build_lambda.sh  build_layers.sh
lambda/: handler.py
terraform/: .terraform.lock.hcl  build.tf  eventbridge_scheduler.tf  lambda.tf  locals.tf  main.tf  output.tf  schedule_01_sunday.tf  schedule_02_monday.tf  schedule_03_tuesday.tf  schedule_04_wednesday.tf  schedule_05_thursday.tf  schedule_06_friday.tf  schedule_07_saturday.tf  terraform.tfvars.example  variables.tf
